--- a/insta_crawling.ipynb
+++ b/insta_crawling.ipynb
@@ -100,8 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_id=\"kisu875@naver.com\"\n",
-    "user_passwd=\"rlarltn6062\" "
+    "user_id=\"*************\"\n",
+    "user_passwd=\"*************\" "
    ]
   },
   {
@@ -560,7 +560,264 @@
       "적토마 중대 조교로 활동할 수 있어서 좋았습니다. 좋은 선임, 후임, 간부님들을 통해서 많이 배웠고 더 좋은 사람이 되겠습니다. 군생활 내내 힘들 점도 있었지만 좋은 기억도 많았던 것 같습니다. 후임들은 좀만 더 버텨서 잘 전역하고 간부님들도 전역하는 그 순간까지 응원하겠습니다. 감사합니다.\n",
       "#전역\n",
       "\n",
-      "해시태그는 :   전역\n"
+      "해시태그는 :   전역\n",
+      "댓글 개수 :  25\n",
+      "11번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = yoon_hee_99 : 내용 : 고생많았다 👏👏👏👏 \n",
+      "11번째 게시물의 2번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @yoon_hee_99 고마워 조만간봐 \n",
+      "11번째 게시물의 3번째 댓글/대댓글 : \n",
+      " id = kkk__hw : 내용 : 🔥🔥 \n",
+      "11번째 게시물의 4번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @kkk__hw 👏👏👏 \n",
+      "11번째 게시물의 5번째 댓글/대댓글 : \n",
+      " id = _oosub_ : 내용 : 오오오 고생했우👏 \n",
+      "11번째 게시물의 6번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @_oosub_ 고마워 조만간봐 \n",
+      "11번째 게시물의 7번째 댓글/대댓글 : \n",
+      " id = 2.04_gl : 내용 : 👏 \n",
+      "11번째 게시물의 8번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @2.04_gl 🙌🙌🙌 \n",
+      "11번째 게시물의 9번째 댓글/대댓글 : \n",
+      " id = kimjaeyoonn : 내용 : 기수야 고생 많았다 곧 보자❤️ \n",
+      "11번째 게시물의 10번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @kimjaeyoonn 그래 곧 보자♡ \n",
+      "11번째 게시물의 11번째 댓글/대댓글 : \n",
+      " id = semn_e : 내용 : 축하햇~~~🔥🔥🔥🔥 \n",
+      "11번째 게시물의 12번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @semn_e 고마워 세민브 \n",
+      "11번째 게시물의 13번째 댓글/대댓글 : \n",
+      " id = captain._jeong : 내용 : 고생했다 기수야 못보고 가네 ~ 👍🏻 \n",
+      "11번째 게시물의 14번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @captain._jeong 😢😢 \n",
+      "11번째 게시물의 15번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @captain._jeong 못봐서 너무아쉽습니다.ㅜㅜㅜ 감사합니다 \n",
+      "11번째 게시물의 16번째 댓글/대댓글 : \n",
+      " id = k_osssshhhh : 내용 : 고생햇다 \n",
+      "11번째 게시물의 17번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @k_osssshhhh 👏👏 고마워 너도 좀만 더버텨 \n",
+      "11번째 게시물의 18번째 댓글/대댓글 : \n",
+      " id = cklgis : 내용 : 허억오빠 넘수고해써🥺 \n",
+      "11번째 게시물의 19번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @cklgis 고맙다 조만간 봐 \n",
+      "11번째 게시물의 20번째 댓글/대댓글 : \n",
+      " id = win._.on : 내용 : 드디어 나왓구나😢 고생많앗엉👏 \n",
+      "11번째 게시물의 21번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @win._.on 고마워~~ 복학잘하구 \n",
+      "11번째 게시물의 22번째 댓글/대댓글 : \n",
+      " id = b_d714 : 내용 : 기수 짬찌 모자 썼네😢 \n",
+      "11번째 게시물의 23번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @b_d714 ㅡㅡ \n",
+      "11번째 게시물의 24번째 댓글/대댓글 : \n",
+      " id = exousiak : 내용 : 귀..귀엽다 \n",
+      "11번째 게시물의 25번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @exousiak 형이더 ㅎㅎ \n",
+      "------------12번째 게시물은 2020-12-31T09:04:31.000Z에 올라갔습니다.------------\n",
+      "-------------------12번째 게시물의 내용은-------------------\n",
+      "Goodbye 2020\n",
+      "Hello 2021\n",
+      "전역을 앞두고 있어서 여러 생각이 들기도 하고, 무엇보다 저를 챙겨주는 모든 분들한테 항상 감사합니다.\n",
+      "전역의 해가 밝을 것이고, 조만간 다들 봤으면 좋겠네요. Happy new year!\n",
+      "\n",
+      "#2020#2021#22#23살#해피뉴이어#전역#D-70#추억#사진\n",
+      "\n",
+      "해시태그는 :   2020 2021 22 23살 해피뉴이어 전역 D 추억 사진\n",
+      "댓글 개수 :  4\n",
+      "12번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = win._.on : 내용 : 그래서 언제나오는데~ \n",
+      "12번째 게시물의 2번째 댓글/대댓글 : \n",
+      " id = yeharina : 내용 : 우리기수 최고다 \n",
+      "12번째 게시물의 3번째 댓글/대댓글 : \n",
+      " id = b_d714 : 내용 : 전역 안 할래? \n",
+      "12번째 게시물의 4번째 댓글/대댓글 : \n",
+      " id = kimjaeyoonn : 내용 : 기수야 좀 만 더 힘내 파이팅💕 \n",
+      "------------13번째 게시물은 2020-12-24T23:28:19.000Z에 올라갔습니다.------------\n",
+      "-------------------13번째 게시물의 내용은-------------------\n",
+      "Happy Merry Christmas\n",
+      "#merrychristmas #christmas\n",
+      "\n",
+      "해시태그는 :   merrychristmas christmas\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "댓글 개수 :  0\n",
+      "------------14번째 게시물은 2020-09-12T03:59:14.000Z에 올라갔습니다.------------\n",
+      "-------------------14번째 게시물의 내용은-------------------\n",
+      "세달전 외출했을때\n",
+      "카페 이쁘다\n",
+      "#카페는#프로프라이프#proplife#일상#22#일병의마지막외출\n",
+      "\n",
+      "해시태그는 :   카페는 프로프라이프 proplife 일상 22 일병의마지막외출\n",
+      "댓글 개수 :  2\n",
+      "14번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = _prop_life : 내용 : 와주셔서 감사드립니다! \n",
+      "14번째 게시물의 2번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @_prop_life 넵! 외출풀리면 자주 가겠습니다 \n",
+      "------------15번째 게시물은 2020-06-26T10:44:44.000Z에 올라갔습니다.------------\n",
+      "-------------------15번째 게시물의 내용은-------------------\n",
+      "일병때의 마지막 출타\n",
+      "@aft4m @danny_boy_714 @b_d714\n",
+      "#사창리#카페#맘터#외출#복귀\n",
+      "\n",
+      "해시태그는 :   사창리 카페 맘터 외출 복귀\n",
+      "댓글 개수 :  0\n",
+      "------------16번째 게시물은 2020-05-21T10:34:57.000Z에 올라갔습니다.------------\n",
+      "-------------------16번째 게시물의 내용은-------------------\n",
+      "2020.05.15~2020.05.21 두번째 휴가\n",
+      "6박 7일간 좋은 추억 만들고\n",
+      "재밌게 논 거 같아서 후회는 안합니다.\n",
+      "함께 놀아서 재밌었고 다음 휴가때 만나요:)\n",
+      "#휴가#복귀#두번째#끝집#광운대#혜화#메밀향#진미#윤스쿡#이제#시작#꽃제비#석계#초밥#콘레드#빽다방\n",
+      "\n",
+      "해시태그는 :   휴가 복귀 두번째 끝집 광운대 혜화 메밀향 진미 윤스쿡 이제 시작 꽃제비 석계 초밥 콘레드 빽다방\n",
+      "댓글 개수 :  6\n",
+      "16번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = kimjaeyoonn : 내용 : 기수야 다시 적응 잘해라.. \n",
+      "16번째 게시물의 2번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @kjy._.99 ㅋㅋㅋㅋㅋㅋ너가더힘들거야...오늘검사받음? \n",
+      "16번째 게시물의 3번째 댓글/대댓글 : \n",
+      " id = ds.wook : 내용 : @zzat_ki_soo 둘이 왜 여기서 썸타?? 이게 전우`애`인가? \n",
+      "16번째 게시물의 4번째 댓글/대댓글 : \n",
+      " id = semn_e : 내용 : 꽃제비는 왜 없죠~? \n",
+      "16번째 게시물의 5번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @semn_e 수정했다 ㅋㅋㅋㅋㅋㅋㅋㅋ 첨에 쓸땐있었는데 다시쓸때안썻다 \n",
+      "16번째 게시물의 6번째 댓글/대댓글 : \n",
+      " id = semn_e : 내용 : @zzat_ki_soo ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ \n",
+      "------------17번째 게시물은 2020-03-04T10:28:16.000Z에 올라갔습니다.------------\n",
+      "-------------------17번째 게시물의 내용은-------------------\n",
+      "Daily\n",
+      "\n",
+      "해시태그는 :  \n",
+      "댓글 개수 :  0\n",
+      "------------18번째 게시물은 2019-12-31T09:42:47.000Z에 올라갔습니다.------------\n",
+      "-------------------18번째 게시물의 내용은-------------------\n",
+      "2019년도 모두 수고많았고, 2020년 잘 보내길~~~ happy new year~~\n",
+      "#2019#2020#21살이#아닌#22살#해피뉴이어#한해동안#수고많았어요👏#굿바이#2019\n",
+      "\n",
+      "해시태그는 :   2019 2020 21살이 아닌 22살 해피뉴이어 한해동안 수고많았어요 굿바이 2019\n",
+      "댓글 개수 :  14\n",
+      "18번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = _oosub_ : 내용 : 해피해피🥳 \n",
+      "18번째 게시물의 2번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @_oosub_ 해피 \n",
+      "18번째 게시물의 3번째 댓글/대댓글 : \n",
+      " id = xison_ : 내용 : 힘내자 기수야 💪 \n",
+      "18번째 게시물의 4번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @xison_ 같이힘내잨ㅋㅋㅋㅋ 오늘일병담 \n",
+      "18번째 게시물의 5번째 댓글/대댓글 : \n",
+      " id = m1n_jje0ng : 내용 : 머리 긴 준혁이 돌려줘😢 \n",
+      "18번째 게시물의 6번째 댓글/대댓글 : \n",
+      " id = m1n_jje0ng : 내용 : @m1n_jje0ng 연말 잘 보내〰️🎄 \n",
+      "18번째 게시물의 7번째 댓글/대댓글 : \n",
+      " id = _oosub_ : 내용 : @m1n_jje0ng 머리 긴 수빈이는 여깄어😘 \n",
+      "18번째 게시물의 8번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @m1n_jje0ng 멧돼지 주녁이도 기여움 \n",
+      "18번째 게시물의 9번째 댓글/대댓글 : \n",
+      " id = janghyoyoung : 내용 : 힘내자 기수야~~~~❤️ \n",
+      "18번째 게시물의 10번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @janghyoyoung 형도힘내자 ㅎㅎ \n",
+      "18번째 게시물의 11번째 댓글/대댓글 : \n",
+      " id = 5mich_r : 내용 : 수고링 \n",
+      "18번째 게시물의 12번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @5mich_rail ㅅㄱㄹ \n",
+      "18번째 게시물의 13번째 댓글/대댓글 : \n",
+      " id = _hongpyo : 내용 : 기수 휴가나오면 연락 ㄱ \n",
+      "18번째 게시물의 14번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @j_hongpyo ㅇㅋㅇㅋㅇㅋ \n",
+      "------------19번째 게시물은 2019-09-23T13:15:55.000Z에 올라갔습니다.------------\n",
+      "-------------------19번째 게시물의 내용은-------------------\n",
+      "세번째 딘스리스트\n",
+      "앞으로 더 열심히하겠습니다~~\n",
+      "Photo by @perarduaadastra__\n",
+      "#광운대#딘스리스트#21#18\n",
+      "\n",
+      "해시태그는 :   광운대 딘스리스트 21 18\n",
+      "댓글 개수 :  10\n",
+      "19번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = semn_e : 내용 : 추카추카추~~ \n",
+      "19번째 게시물의 2번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @semn_e ㄱㅅㄱㅅㄱㅅ \n",
+      "19번째 게시물의 3번째 댓글/대댓글 : \n",
+      " id = so_young_and_happy_ : 내용 : 축하합니당〰️〰️❗️❗️ \n",
+      "19번째 게시물의 4번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @so_young_and_rich 갓소영님도 \n",
+      "19번째 게시물의 5번째 댓글/대댓글 : \n",
+      " id = yoon_hee_99 : 내용 : 수고했따ㅏ👏👏👏 \n",
+      "19번째 게시물의 6번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @yunhui_99_ 너도 저기 가자 \n",
+      "19번째 게시물의 7번째 댓글/대댓글 : \n",
+      " id = dingureeee : 내용 : 군대가서 열심히 하세요~^^ \n",
+      "19번째 게시물의 8번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @dingureeee 하 \n",
+      "19번째 게시물의 9번째 댓글/대댓글 : \n",
+      " id = dingureeee : 내용 : @zzat_ki_soo 베댓이다 보여? 모두가 응원해 너의 군생활~^ㅡㅡㅡ^ \n",
+      "19번째 게시물의 10번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @dingureeee 넌군대 안가냐 \n",
+      "------------20번째 게시물은 2019-09-14T15:11:52.000Z에 올라갔습니다.------------\n",
+      "-------------------20번째 게시물의 내용은-------------------\n",
+      "잘생긴 사람들과\n",
+      "@jinhwan42\n",
+      "@ssungho_yang\n",
+      "@kim_retire\n",
+      "@rararu__\n",
+      "@seunghw_a @sky#군대이젠한달#30일#애떨#뜽화#년#땅보#뽜니#양땡#애너리#힘들다#팡대#99#98\n",
+      "\n",
+      "해시태그는 :   군대이젠한달 30일 애떨 뜽화 년 땅보 뽜니 양땡 애너리 힘들다 팡대 99 98\n",
+      "댓글 개수 :  1\n",
+      "20번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = ds.wook : 내용 : 잘생겼네 \n",
+      "------------21번째 게시물은 2019-08-25T14:02:10.000Z에 올라갔습니다.------------\n",
+      "-------------------21번째 게시물의 내용은-------------------\n",
+      "써머 베케이션\n",
+      "#다른사람은#개강#나는#아니야\n",
+      "#군대50일#방학#여름방학#휴식\n",
+      "#자격증\n",
+      "\n",
+      "해시태그는 :   다른사람은 개강 나는 아니야 군대50일 방학 여름방학 휴식 자격증\n",
+      "댓글 개수 :  4\n",
+      "21번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = bob_chaenn : 내용 : 저긔요 스마일좀 하세요오~~~~~ \n",
+      "21번째 게시물의 2번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @fooding_bbongzzak 컨셉임 ㅎ \n",
+      "21번째 게시물의 3번째 댓글/대댓글 : \n",
+      " id = ___kiss_o : 내용 : @fooding_bbongzzak 근데 나알아봣냐 ㅋㅋ \n",
+      "21번째 게시물의 4번째 댓글/대댓글 : \n",
+      " id = bob_chaenn : 내용 : @zzat_ki_soo ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋ \n",
+      "------------22번째 게시물은 2019-06-23T13:11:24.000Z에 올라갔습니다.------------\n",
+      "-------------------22번째 게시물의 내용은-------------------\n",
+      "Today\n",
+      "\n",
+      "해시태그는 :  \n",
+      "댓글 개수 :  3\n",
+      "22번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = jxngsx_622 : 내용 : 잦 그자체.. \n",
+      "22번째 게시물의 2번째 댓글/대댓글 : \n",
+      " id = 5mich_r : 내용 : 잦기수.. \n",
+      "22번째 게시물의 3번째 댓글/대댓글 : \n",
+      " id = herz_0914 : 내용 : 기수~~ \n",
+      "------------23번째 게시물은 2019-04-06T13:16:43.000Z에 올라갔습니다.------------\n",
+      "-------------------23번째 게시물의 내용은-------------------\n",
+      "잘가...ㅜㅜㅜㅜㅜㅜㅜㅜㅜㅜㅜㅜㅜ\n",
+      "#군대#입대#잘가#사랑해#보고싶을거야#태미니형\n",
+      "\n",
+      "해시태그는 :   군대 입대 잘가 사랑해 보고싶을거야 태미니형\n",
+      "댓글 개수 :  6\n",
+      "23번째 게시물의 1번째 댓글/대댓글 : \n",
+      " id = gabinleee : 내용 : 😊 \n",
+      "23번째 게시물의 2번째 댓글/대댓글 : \n",
+      " id = gydian_wans : 내용 : Nice pic! \n",
+      "23번째 게시물의 3번째 댓글/대댓글 : \n",
+      " id = herz_0914 : 내용 : 잣기수.. \n",
+      "23번째 게시물의 4번째 댓글/대댓글 : \n",
+      " id = ds.wook : 내용 : @herz_0914 잣... \n",
+      "23번째 게시물의 5번째 댓글/대댓글 : \n",
+      " id = ds.wook : 내용 : 태민이ㅠㅠ \n",
+      "23번째 게시물의 6번째 댓글/대댓글 : \n",
+      " id = rararu__ : 내용 : 잣같은놈 \n",
+      "다음 거로 넘길 수 없음\n"
      ]
     }
    ],
